Complete future when user isn't found
Fixes a bug where a NullPointer would cause a CompletableFuture to never complete
causing the server to never respond.